# NativeUI

./: '  .gitignore  Cargo.toml  Makefile  Notes.norg  README.md  TODO.md  index.html  styles.css
assets/: styles.css
core/: Cargo.toml  readme.md
core/src/: layout.rs  lib.rs  prelude.rs  rect.rs  style_manager.rs
crates/css/: '  Cargo.toml  README.md
crates/css/examples/: lightning.rs  styles.css  test.rs
crates/css/src/: lib.rs
crates/css/src/parser/: at_rule.rs  color.rs  error.rs  mod.rs  nested.rs  parser.rs  stylesheet.rs  tokenizer.rs
crates/css/src/parser/decleration/: mod.rs  unit.rs
crates/css/src/parser/selector/: attribute.rs  combinator.rs  compound.rs  mod.rs  pseudo.rs  readme.md
crates/css/src/parser/types/: base.rs  border.rs  decleration.rs  mod.rs  or.rs  shape.rs
crates/css/src/parser/types/color/: color_space.rs  mod.rs  named.rs  system.rs
crates/html/: Cargo.toml
crates/js/: Cargo.toml
crates/render/: Cargo.toml
crates/render/src/: main.rs
crates/sys/: Cargo.toml  README.md
crates/sys/examples/: color_picker.rs  create_window.rs  exit_prompt.rs  file_save.rs  file_select.rs  folder_select.rs  font_select.rs  test.rs  window.rs
crates/sys/src/: error.rs  lib.rs  modal.rs  prelude.rs  style.rs  window.rs
crates/sys/src/event/: keyboard.rs  mod.rs  mouse.rs
crates/sys/src/windows/: event.rs  mod.rs  modal.rs  win_error.rs  window.rs
crates/sys/src/windows/modal/: color.rs  file.rs  font.rs  mod.rs  prompt.rs
examples/: app.rs  goal.rs  multi_win.rs  prototype.rs  style.rs  window.rs
kits/braeburn/: README.md
kits/humboldt/: Cargo.toml  README.md
kits/skylight/: Cargo.toml
kits/skylight/examples/: multi_win.rs  window.rs
kits/skylight/src/: lib.rs  macros.rs  window.rs
kits/skylight/src/control/: button.rs  helpers.rs  mod.rs  scroll_bar.rs  text.rs
kits/skylight/src/core/: constants.rs  errors.rs  image.rs  layout.rs  mod.rs  style.rs
kits/skylight/src/macros/: mod.rs
kits/skylight/src/popup/: message_box.rs
kits/skylight/src/window/: mod.rs  win.rs
kits/skylight/src/window/popup/: message_box.rs  types.rs
layout/: README.md
layout/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: badges.py  init.py
src/: lib.rs  macros.rs  main.rs  prelude.rs
src/ui/: mod.rs  window.rs
src/ui/popup/: message.rs  mod.rs
src/win/: window.rs
src/win/core/: mod.rs
src/win/core/color/: brush.rs  mod.rs
src/win/popup/: mod.rs
style/: Cargo.toml  test.css
style/examples/: stylesheet.rs
style/src/: color.rs  lib.rs  parser.rs  rules.rs  size.rs  styles.rs
style/src/color/: mod.rs
