[package]
name = "native_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro-hack = "0.5"
native_core = { path = "core" }
macros = { path = "macros" }
skylight = { path = "platforms/windows" }
style = { path = "style" }
