[package]
name = "native_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vulkano = { version = "0.33.0", features = ["serde"] }
web-view = { version = "0.7.3", features=["edge"] }
winit = { version = "0.28.6", features = ["android-native-activity"] }
