[package]
name = "cypress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cypress-sys = { path = "crates/sys" }
cypress-html = { path = "crates/html" }
cypress-css = { path = "crates/html" }
cypress-js = { path = "crates/js" }
cypress-render = { path = "crates/render" }
