[package]
name = "cypress-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# vk_interop
glium = { version = "0.33.0" }

[target.'cfg(unix)'.dependencies]
vulkano = { version = "0.33.0", features = ["serde"] }

[target.'cfg(macos)'.dependencies]
metal-rs = { version = "0.10.6" }

[target.'cfg(windows)'.dependencies]
array-init="2.0.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.51.1"
features = [
    "Foundation_Numerics",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",
]