[package]
name = "cypress-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
uuid = { version = "1.5.0", features = ["v8", "v4"] }
clap = { version = "4.4.8", features = ["derive"] }

[dependencies.windows]
version = "0.51.1"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_Dwm",
    "Win32_System_Registry",
    "UI_ViewManagement",
    "Win32_UI_Controls"
]
