[package]
name = "cypress-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.5.0", features = ["v4"] }

# See about switching to windows-sys
[dependencies.windows]
version = "0.52.0"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_Dwm",
    "Win32_System_Registry",
    "UI_ViewManagement",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls_Dialogs"
]
